@@ -68,9 +68,8 @@ and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
   	<a href="http://www.helenos.org/">HelenOS</a> 0.4.0 have been released,
   	and the guest OS page has been updated to reflect this. (Not all
   	versions and architectures work; the versions listed on the
-  	guest OS page are the latest ones that work.)
+  	guest OS page are the latest ones that have been tested.)
   <li>A bug has been fixed which prevented configuration files from being used.
-  <li><b>TODO: MORE!</b>
   
 </ul>
 
